# anland

./: CMakeLists.txt  README.md  build_and_install.sh  keyboardedit.html
.github/workflows/: build.yml  build_daemon.yml
android_consumer/app/src/main/: AndroidManifest.xml
consumers/anland_v5/android_consumer/app/: build.gradle
daemon/: daemon.c
libdisplay_consumer/: display_consumer.c  display_consumer.h
libdisplay_producer/: display_producer.c  display_producer.h
producers/kde/ubuntu2404_v1/: kwin.patch  startkde.sh  xwayland.patch
producers/kde/ubuntu2604_v2/: kwin.patch
producers/kde/ubuntu2604_v3/: kwin.patch
producers/weston_v1/: build_and_install.sh  libdisplay_producer
producers/weston_v1/weston/: .gitlab-ci.yml  README.md
producers/weston_v1/weston/clients/: meson.build  simple-dmabuf-egl.c  simple-dmabuf-feedback.c  simple-dmabuf-vulkan.c  simple-egl.c  simple-vulkan.c
producers/weston_v1/weston/coverage/: gcovr.cfg  meson.build
producers/weston_v1/weston/desktop-shell/: input-panel.c  shell.c
producers/weston_v1/weston/frontend/: text-backend.c
producers/weston_v1/weston/ivi-shell/: hmi-controller.c  ivi-layout.c
producers/weston_v1/weston/kiosk-shell/: kiosk-shell-grab.c  kiosk-shell.c
producers/weston_v1/weston/libweston/: alpha-modifier.c  alpha-modifier.h  backend.h  bindings.c  color-management.c  color-properties.c  color-properties.h  color.h  commit-timing.c  data-device.c  fifo.c  input.c  libinput-device.c  libinput-seat.c  libweston-internal.h  linux-dmabuf.c  noop-renderer.c  pixman-renderer.c  surface-state.c  timeline-perfetto.c  timeline.c  timeline.h  touch-calibration.c  weston-trace.h
producers/weston_v1/weston/libweston/desktop/: meson.build  seat.c  xdg-shell.c
producers/weston_v1/weston/subprojects/edid-decode/: .gitignore  .meson-subproject-wrap-hash.txt  README  calc-gtf-cvt.cpp  edid-decode.cpp  edid-decode.h  meson.build  oui.h  parse-base-block.cpp  parse-cta-block.cpp  parse-displayid-block.cpp
producers/weston_v1/weston/subprojects/edid-decode/emscripten/: edid-decode.html
producers/weston_v1/weston/subprojects/edid-decode/test/: README
producers/weston_v1/weston/subprojects/edid-decode/vs/: edid-decode.vcxproj  edid-decode.vcxproj.filters  getsubopt.c
(+142 files in other folders)
